Refactor SealMapper dock to panel and update plugin info
Replaces dock instantiation with a panel in SealMapper.gd for improved clarity and maintainability. Updates plugin.cfg with an enhanced description and bumps the version to 1.0.1.

--- a/SealMapper/plugin.cfg
+++ b/SealMapper/plugin.cfg
@@ -1,7 +1,8 @@
 [plugin]
 
 name="SealMapper"
-description="import coordinates from SealLogger to generate objects."
+description="- import coordinates from SealLogger to generate objects.
+- generate world icons for team id's."
 author="SiB"
-version="1.0.0"
+version="1.0.1"
 script="SealMapper.gd"
